removed DAOs usage as possible